# MLOps-with-ZenML

./: README.md  example copy.py  example.py  pyproject.toml  run_pipeline.py  test.py
.zen/: config.yaml
pipelines/: training_pipeline.py
src/: data_cleaning.py  evaluation.py  model_dev.py
steps/: clean_data.py  evaluation.py  ingest_data.py  model_train.py
