[tool.poetry]
name = "mlops"
version = "0.1.0"
description = "test"
authors = ["maxwkut <max.kutschinski@hotmail.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.12"
zenml = {extras = ["server"], version = "^0.57.0"}
scikit-learn = "^1.4.2"
mlflow = "^2.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
